[gd_scene load_steps=10 format=3 uid="uid://cupou0im3d1p4"]

[ext_resource type="Script" uid="uid://umkwxf2c7qif" path="res://main.gd" id="1_60sud"]
[ext_resource type="PackedScene" uid="uid://cwe20a0wekhkh" path="res://player.tscn" id="1_ul17p"]
[ext_resource type="PackedScene" uid="uid://ca2xsvqe3hv5k" path="res://mob.tscn" id="2_2jm7v"]
[ext_resource type="PackedScene" uid="uid://dcamjt1m2ro4i" path="res://health.tscn" id="3_5vw27"]
[ext_resource type="Texture2D" uid="uid://bh4tka76n7xd3" path="res://art/background.png" id="3_pyjdo"]
[ext_resource type="PackedScene" uid="uid://dfd2v6baa7rfu" path="res://hud.tscn" id="4_5xsd8"]
[ext_resource type="AudioStream" uid="uid://diow67oycbtor" path="res://art/deathsound.mp3" id="6_7mycd"]
[ext_resource type="AudioStream" uid="uid://d2b7iov1mgc37" path="res://art/background_music.mp3" id="6_272bh"]

[sub_resource type="Curve2D" id="Curve2D_q4pc1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1080, 0, 0, 0, 0, 0, 1080, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 7

[node name="Main" type="Node"]
script = ExtResource("1_60sud")
mob_scene = ExtResource("2_2jm7v")
health_loot = ExtResource("3_5vw27")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_pyjdo")

[node name="Player" parent="." instance=ExtResource("1_ul17p")]
visible = false

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_q4pc1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_5xsd8")]
player = NodePath("../Player")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_272bh")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7mycd")

[node name="LootTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="die" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="LootTimer" to="." method="_on_loot_timer_timeout"]
